--- a/app/src/main/res/layout/item_rss_fragment.xml
+++ b/app/src/main/res/layout/item_rss_fragment.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp">
+    android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rss_item_title"
-        android:textStyle="bold"
         android:textAlignment="center"
+        android:id="@+id/full_title"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rss_short_desc"
-        android:maxLines="2"
-        android:minLines="1"
-        android:textColor="@android:color/darker_gray"
-        android:ellipsize="end"/>
+        android:text="fdgdfgdfg"
+        android:id="@+id/full_desc"/>
 
 </LinearLayout>
