--- a/app/src/main/res/layout/item_rss_fragment.xml
+++ b/app/src/main/res/layout/item_rss_fragment.xml
@@ -8,6 +8,12 @@
         android:textAlignment="center"
         android:id="@+id/full_title"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+    <View
+        android:layout_width="match_parent"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
+        android:layout_height="2dp"
+        android:background="#c0c0c0"/>
 
     <TextView
         android:layout_width="match_parent"
