--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -4,7 +4,7 @@
         <item
             android:id="@+id/nav_list_fragment"
             android:orderInCategory="0"
-            android:title="Superheroes" />
+            android:title="@string/nav_draw_superheroes" />
     </group>
 
 
@@ -14,14 +14,14 @@
         <item
             android:id="@+id/nav_rss_channel_1"
             android:orderInCategory="1"
-            android:title="Rss channel 1" />
+            android:title="@string/nav_draw_rss1" />
         <item
             android:id="@+id/nav_rss_channel_2"
             android:orderInCategory="1"
-            android:title="Rss channel 2" />
+            android:title="@string/nav_draw_rss2" />
         <item
             android:id="@+id/nav_rss_channel_3"
             android:orderInCategory="1"
-            android:title="Rss channel 3" />
+            android:title="@string/nav_draw_rss3" />
     </group>
 </menu>
